# waygate-ai

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  archetype-orchestrator.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/skills/integrate-agent-api/: SKILL.md  skill.yaml
.claude/skills/integrate-limen/: SKILL.md  skill.yaml
.claude/skills/integrate-waygate-ai/: SKILL.md  skill.yaml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  security.yml
agent_api/: __init__.py  client.py  config.py  exceptions.py  security.py
agent_api/providers/: __init__.py  anthropic.py  ollama.py  openai.py
docs/: INTEGRATION_GUIDE.md  RELEASE_WORKFLOW.md  api-reference.md  architecture.md  getting-started.md  index.md  integration-guide.md  model-routing.md  release-readiness.md  trust-model.md
docs/decisions/: ADR-001-unified-llm-client.md  ADR-002-prompt-injection-guard.md  ADR-003-backend-priority.md
docs/planning/: CONTEXT_CHECKPOINTS.md  CONTEXT_LOOP.md  DOCUMENTATION_IMPLEMENTATION_BRIEF.md  DOCUMENTATION_UNKNOWNS.md  DUAL_AGENT_WORKFLOW.md  PIKE_CLEAN_GATE.md  RALPH_LOOP.md  ROADMAP.md  SOURCE_CONSULTATION_MAP.md
docs/stylesheets/: extra.css
limen/: __init__.py  client.py  config.py  exceptions.py  security.py
limen/providers/: __init__.py  anthropic.py  ollama.py  openai.py
security/evidence/: llm-security-evidence.md  prompt-guard-checklist.md  risk-profile.md  secure-by-default-checklist.md  security-metrics.md  security-requirements.md  security-test-matrix.md  threat-model.md  vulnerability-management.md
security/sbom/: sbom-placeholder.json
tests/unit/: test_client.py  test_config.py  test_providers.py  test_providers_openai.py  test_router.py  test_security.py
waygate_ai/: __init__.py  client.py  config.py  exceptions.py  router.py
waygate_ai/providers/: anthropic.py  ollama.py  openai.py
