[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "limen"
version = "0.1.0"
description = "The guarded threshold between your application and AI providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["llm", "ai", "anthropic", "openai", "ollama", "prompt-injection"]

authors = [
    { name = "Shep Engineering" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/shep-engineering/limen"
Documentation = "https://shep-engineering.github.io/limen/"
Repository = "https://github.com/shep-engineering/limen"
Issues = "https://github.com/shep-engineering/limen/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.26.0"]
openai   = ["openai>=1.30.0"]
all      = ["anthropic>=0.26.0", "openai>=1.30.0"]
dev      = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["limen*", "agent_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=limen --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
