[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "waygate-ai"
version = "0.1.0"
description = "A guarded gateway between your application and AI providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["llm", "ai", "anthropic", "openai", "ollama", "prompt-injection"]

authors = [
    { name = "Shep Engineering" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/shep-engineering/waygate-ai"
Documentation = "https://shep-engineering.github.io/waygate-ai/"
Repository = "https://github.com/shep-engineering/waygate-ai"
Issues = "https://github.com/shep-engineering/waygate-ai/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.26.0"]
openai   = ["openai>=1.30.0"]
all      = ["anthropic>=0.26.0", "openai>=1.30.0"]
dev      = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["waygate_ai*", "limen*", "agent_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=waygate_ai --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
